<resources>
    <string name="app_name">Công thức nấu ăn</string>
    <string name="search_here">Search keyword here…</string>
    <string name="go_btn">GO</string>
    <string name="all_btn">ALL</string>
    <string name="action_btn">Bắt đầu thực hiện</string>
    <string name="search">Tìm kiếm</string>
    <string name="text_khauphan">Khẩu phần</string>
    <string name="textView">TextView</string>
    <string name="text_time">Thời gian</string>
    <string name="text_level">Độ khó</string>
    <string name="text_search">Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hoan_thanh">Hoàn thành</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="nguyenLieu">Nguyên liệu</string>
</resources>
